Increase the BTLE scan timeout to 25s

It seems that some BTLE devices require more than 10s to be found.
This timeout change increases the chances to find slow remote devices.
The user has to cancel if he doesn't want to wait the full 25s.

Task-number: QTBUG-53012
Change-Id: Id9bafbe09528619ac6dff17c33322ef90beb8829
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@theqtcompany.com>
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>